--- a/app/src/main/res/layout/activity_assessments.xml
+++ b/app/src/main/res/layout/activity_assessments.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:flow_verticalAlign="center"
-    tools:context=".Courses">
+    tools:context=".Assessments">
 
 
     <ImageView
